2012-01-09  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (addressable_p) <COMPONENT_REF>: Fix thinko.

2012-01-02  Eric Botcazou  <ebotcazou@adacore.com>

	* gnatvsn.ads (Current_Year): Bump to 2011.

2011-12-08  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/51315
	Backport from mainline
	2011-09-25  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/decl.c (gnat_to_gnu_entity) <object>: Do not promote
	the alignment if this doesn't prevent BLKmode access to the object.

2011-11-13  Iain Sandoe  <iains@gcc.gnu.org>

	Backport from mainline r181474
	PR target/50678
	* init.c (__gnat_error_handler) [Darwin]: Move work-around to the
	bug filed as radar #10302855 from __gnat_error_handler ...
	... to (__gnat_adjust_context_for_raise) [Darwin]: New.
	(HAVE_GNAT_ADJUST_CONTEXT_FOR_RAISE) [Darwin]: Define.
	(__gnat_error_handler) [Darwin]: Use __gnat_adjust_context_for_raise.
	
2011-11-18  Tristan Gingold  <gingold@adacore.com>
	    Iain Sandoe  <iains@gcc.gnu.org>

	PR target/49992
	* mlib-tgt-specific-darwin.adb (Archive_Indexer_Options): Remove.
	* gcc-interface/Makefile.in (darwin): Remove ranlib special-casing
	for Darwin.

2011-11-13  Iain Sandoe  <iains@gcc.gnu.org>

	Backport from mainline r181319
	* gcc-interface/Makefile.in (stamp-gnatlib-$(RTSDIR)): Don't link
	s-oscons.ads.
	(OSCONS_CPP, OSCONS_EXTRACT): New.
	(./bldtools/oscons/xoscons): New Target.
	($(RTSDIR)/s-oscons.ads): New Target.
	(gnatlib): Depend on  $(RTSDIR)/s-oscons.ads.
	* Make-generated.in: Remove machinery to generate xoscons and
	ada/s-oscons.ads.
	
2011-10-26  Release Manager

	* GCC 4.6.2 released.

2011-09-19  Iain Sandoe  <iains@gcc.gnu.org>

	Backport from mainline (restore powerpc-darwin Ada bootstrap).
	* traceback.c (Darwin) USE_GCC_UNWINDER for Darwin versions >= 8.

2011-09-11  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/decl.c (maybe_pad_type): Do not try to change the form
	of an addressable type.