@@ -1,0 +1,5 @@
+package Renaming5 is
+
+   procedure Proc;
+
+end Renaming5;
