@@ -1,3 +1,9 @@
+2012-01-21  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR ada/46192
+	* gcc-interface/decl.c (gnat_to_gnu_entity) <object>: In the case of a
+	renaming, preserve the volatileness through the indirection, if any.
+
 2012-01-09  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc-interface/trans.c (addressable_p) <COMPONENT_REF>: Fix thinko.
